--- a/src/components/molecules/blog-post-preview.module.scss
+++ b/src/components/molecules/blog-post-preview.module.scss
@@ -8,7 +8,7 @@ $-image-width: 120px;
 .blogPost {
   display: grid;
   grid-template: "image description" 1fr;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 150px 1fr;
   height: auto;
   margin: 10px 0;
 
