[update] セレクタブルな要素を減らした #27
タグ一覧、ヘッダーメニュー、ヘッダーロゴ、SNSシェアボタン等

--- a/src/components/templates/post.module.scss
+++ b/src/components/templates/post.module.scss
@@ -53,6 +53,10 @@
   position: sticky;
   top: calc(50vh - #{g.$header-height});
   left: 0;
+
+  button {
+    outline: none;
+  }
 }
 
 // Responsive
