[add] 記事一覧に Zenn & Qiita の投稿へのリンクを追加した #38

--- a/src/components/molecules/blog-post-preview.module.scss
+++ b/src/components/molecules/blog-post-preview.module.scss
@@ -10,6 +10,7 @@ $-image-width: 120px;
   grid-template: "image description" 1fr;
   grid-template-columns: 150px 1fr;
   height: auto;
+  min-height: 130px;
   margin: 10px 0;
 
   .title {
