[update] update article style

--- a/src/styles/_module.scss
+++ b/src/styles/_module.scss
@@ -19,6 +19,11 @@
   margin: 15px 30px;
 }
 
+.m-article-title {
+  font-size: 1.5rem;
+  margin: 15px 0;
+}
+
 .m-section-title {
   font-size: 1.2rem;
 }
