--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "sass:color";
 @use "~/styles/_variable.scss" as var;
 
@@ -54,7 +55,7 @@ $-header-nav-min-width: 420px;
 
 $-button-height: var.$header-height * 0.35;
 $-button-width: $-button-height * 1.3;
-$-button-line-height: $-button-height / 7;
+$-button-line-height: math.div($-button-height, 7);
 $-button-inner-height: $-button-height - $-button-line-height;
 
 .menuButton {
@@ -77,7 +78,7 @@ $-button-inner-height: $-button-height - $-button-line-height;
     }
 
     &:nth-child(2) {
-      top: $-button-inner-height / 2;
+      top: math.div($-button-inner-height, 2);
     }
 
     &:nth-child(3) {
@@ -87,7 +88,7 @@ $-button-inner-height: $-button-height - $-button-line-height;
 
   &[aria-expanded="true"] > .menuButtonItem {
     &:nth-child(1) {
-      top: $-button-inner-height / 2;
+      top: math.div($-button-inner-height, 2);
       transform: rotate(45deg);
     }
 
@@ -96,7 +97,7 @@ $-button-inner-height: $-button-height - $-button-line-height;
     }
 
     &:nth-child(3) {
-      top: $-button-inner-height / 2;
+      top: math.div($-button-inner-height, 2);
       transform: rotate(-45deg);
     }
   }
