--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-@forward 'base';
-@forward 'layout';
-@forward 'module';
-@forward 'markdown';
+@forward "base";
+@forward "module";
+@forward "markdown";
