--- a/src/features/layout/components/layout.module.scss
+++ b/src/features/layout/components/layout.module.scss
@@ -1,7 +1,37 @@
-@use "sass:color";
-@use "variable" as var;
-// 全体のレイアウト
-.l-page-container {
+@use "sass:map";
+@use "~/styles/_variable.scss" as var;
+
+.layoutContainer {
+  padding-top: var.$header-height;
+}
+
+.headerWrapper {
+  height: var.$header-height;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.contentWrapper {
+  min-height: calc(100vh - (#{var.$header-height} + #{var.$footer-height}));
+  * {
+    // ページ内リンクジャンプで固定ヘッダに隠れないようにする
+    scroll-margin-top: var.$header-height;
+  }
+}
+
+.footerWrapper {
+  height: var.$footer-height;
+}
+
+.headerWrapper,
+.contentContainer,
+.footerWrapper {
+  width: 100%;
+}
+
+// l-*
+.pageContainer {
   // outer layout
   display: flex;
   flex-direction: row;
@@ -10,8 +40,8 @@
   padding: 70px var.$page-x-padding;
 }
 
-.l-main-wrapper,
-.l-sidebar-container {
+.mainWrapper,
+.sidebarContainer {
   border-radius: 3px;
   display: flex;
   flex-direction: column;
@@ -19,22 +49,22 @@
   position: relative;
 }
 
-.l-main-wrapper {
+.mainWrapper {
   margin: 0 var.$space-between-main-side 0 0;
 }
 
-.l-main-width,
-.l-main-wrapper {
+.mainWidth,
+.mainWrapper {
   width: var.$main-width;
 }
 
-.l-sidebar-width,
-.l-sidebar-container {
+.sidebarWidth,
+.sidebarContainer {
   width: var.$sidebar-width;
 }
 
-.l-main-sticky-area,
-.l-sidebar-sticky-area {
+.mainStickyArea,
+.sidebarStickyArea {
   position: sticky;
   top: var.$header-height + 20px;
   width: 100%;
@@ -48,34 +78,34 @@ $-required-1-column-width: var.$page-x-padding * 2 +
 
 @media screen and (min-width: var.$main-min-width + $-required-2-column-width) and (max-width: var.$main-width + $-required-2-column-width) {
   // main area の縮小 (2カラムは維持)
-  .l-main-width,
-  .l-main-wrapper {
+  .mainWidth,
+  .mainWrapper {
     width: calc(100vw - #{$-required-2-column-width});
   }
 }
 
 @media screen and (max-width: (var.$main-min-width + $-required-2-column-width)) {
   // 1カラムレイアウトへ
-  .l-main-width,
-  .l-main-wrapper {
+  .mainWidth,
+  .mainWrapper {
     margin: 0;
     width: var.$main-width;
   }
-  .l-sidebar-container {
+  .sidebarContainer {
     display: none;
   }
 }
 
 @media screen and (max-width: var.$main-width + 2 * var.$page-x-padding) {
   // 1カラムレイアウト & main area の縮小
-  .l-page-container {
+  .pageContainer {
     padding: 0;
   }
-  .l-main-wrapper {
+  .mainWrapper {
     padding: 25px 0;
   }
-  .l-main-width,
-  .l-main-wrapper {
+  .mainWidth,
+  .mainWrapper {
     width: 100vw;
   }
 }
