--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -5,9 +5,11 @@ import { headerHeight, contentMinHeightStyle, px } from '../features/layout/conf
 
 export interface Props {
   title: string;
+  description?: string;
+  url?: string
 }
 
-const { title } = Astro.props;
+const { title, description, url } = Astro.props;
 
 ---
 <!DOCTYPE html>
@@ -18,6 +20,15 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <!-- OGP -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content={title} />
+    {url !== undefined ? <meta property="og:url" content={url} /> : null}
+    <!-- そのうち対応したい -->
+    <!-- <meta property="og:image" content="" /> -->
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="kimuson.dev" />
+    {description !== undefined ? <meta property="og:description" content={description} /> : null}
   </head>
   <body>
     <div style={{ paddingBlockStart: px(headerHeight) }}>
