--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/layout.astro';
 import Card from '../components/Card.astro';
 import { Counter } from '../components/counter'
+import { siteConfig } from "~/config/site"
+
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title={siteConfig.siteName}>
   <main>
     <h1>Welcome to <span class="text-gradient">Astro</span></h1>
     <p class="instructions">
