--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,39 +1,33 @@
 ---
-import { buildInternalArticleDetail } from "../domain-object/article/internal-article-detail"
-import { fullUrl } from "../domain-object/article/internal-article"
-import { validateBlogProps } from "../features/blog/service/validate-props"
-import { Header } from "../features/layout/header"
-import { Footer } from "../features/layout/footer"
-import { BlogPreviewPage } from "../features/blog/pages/blog-preview-page"
-import { headerHeight, contentMinHeightStyle, px } from '../features/layout/config'
+import { getCollection, CollectionEntry } from "astro:content";
+import { buildInternalArticle } from "~/domain-object/article/internal-article"
+import { Header } from "~/features/layout/header"
+import { Footer } from "~/features/layout/footer"
+import { BlogPreviewPage } from "~/features/blog/pages/blog-preview-page"
+import { headerHeight, contentMinHeightStyle, px } from '~/features/layout/config'
 import { siteConfig } from "~/config/site"
 
-const { url, headings } = validateBlogProps(Astro.props)
-const articleDetail = buildInternalArticleDetail(
-  Astro.props.frontmatter,
-  url,
-  headings
-)
-const articleFullUrl = fullUrl(articleDetail)
+export const getStaticPaths = async () => {
+  const entries = await getCollection('internal-article')
 
-const summaryContent = (): string | undefined => {
-  const rawContent: string = Astro.props.rawContent()
-  
-  const firstSentence = rawContent.split('\n')
-    .filter((content: string) => content !== '')
-    .at(0)
-
-  return firstSentence === undefined ? undefined : firstSentence + '...'
+  return entries.map((entry) => ({
+    params: {
+      slug: entry.slug
+    } as const,
+    props: {
+      entry
+    }
+  }))
 }
 
-const maybeDescription = articleDetail.description === undefined || articleDetail.description === "まだ書かれていません"
-  ? summaryContent()
-  : articleDetail.description
+type Props = {
+  entry: CollectionEntry<'internal-article'>
+}
+const { entry } = Astro.props
 
-console.log(`Page: ${articleDetail.title} (${url})`)
-console.log("frontmatter", articleDetail)
+const internalArticle = await buildInternalArticle(entry)
+
 ---
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -41,24 +35,24 @@ console.log("frontmatter", articleDetail)
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{articleDetail.title}</title>
+    <title>{internalArticle.frontmatter.title}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css" integrity="sha512-mIs9kKbaw6JZFfSuo+MovjU+Ntggfoj8RwAmJbVXQ5mkAX5LlgETQEweFPI18humSPHymTb5iikEOKWF7I8ncQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- OGP -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:title" content={articleDetail.title} />
-    <meta property="og:url" content={articleFullUrl} />
+    <meta property="og:title" content={internalArticle.frontmatter.title} />
+    <meta property="og:url" content={internalArticle.fullUrl} />
     <!-- そのうち対応したい -->
     <!-- <meta property="og:image" content="" /> -->
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content={siteConfig.siteName} />
-    {maybeDescription !== undefined ? <meta property="og:description" content={maybeDescription} /> : null}
+    <meta property="og:description" content={internalArticle.summaryContent} />
   <body>
     <div style={{ paddingBlockStart: px(headerHeight), isolation: 'isolate' }}>
       <Header />
       <div class="content" style={{ minHeight: contentMinHeightStyle, isolation: 'isolate' }}>
-        <BlogPreviewPage client:load articleDetail={articleDetail}>
-          <slot />
+        <BlogPreviewPage client:load internalArticle={internalArticle}>
+          <internalArticle.Content />
         </BlogPreviewPage>
       </div>
       <Footer />
