--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,21 @@
 ---
 import Layout from '../layouts/layout.astro';
-import { IndexPage } from "~/features/top/pages"
+import { SiteTitle } from '../features/navigation/components/site-title'
+import { SnsLinks } from '../features/navigation/components/sns-links'
+import { Contents } from '../features/navigation/components/contents'
 import { siteConfig } from "~/config/site"
 ---
 
 <Layout title={siteConfig.siteName}>
-  <IndexPage />
+  <div class:list={["flex", "h-full", "mx-32", "my-12", "sm:flex-row", "flex-col", "items-center"]}>
+    <div class:list={["w-[50%]", "flex", "flex-col", "h-full", "items-center"]}>
+        <SiteTitle />
+        <img src="/assets/profile.jpg" class:list={["rounded-full", "h-auto", "w-32"]} />
+    </div>
+
+    <div class:list={["w-[50%]", "flex", "flex-col"]}>
+      <Contents className="sm:my-0 my-4" />
+      <SnsLinks className="sm:my-0 my-4" />
+    </div>
+  </div>
 </Layout>
