--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,9 @@
 ---
-import Layout from '../../layouts/layout.astro';
+import { getCollection } from 'astro:content'
+import Layout from '~/layouts/layout.astro';
 import { BlogListPage } from '~/features/blog/pages/blog-list-page'
 import { fetchExternalArticles } from '~/config/external-articles'
 import { fetchAllRssPosts } from '~/repositories/external-articles/fetch-rss-items'
-
-import { getCollection } from 'astro:content'
 import { buildInternalArticle } from '~/domain-object/article/internal-article';
 
 const [externalArticles, rssArticles, internalArticles] = await Promise.all([
