--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,13 +4,13 @@ import Layout from '~/layouts/layout.astro';
 import { BlogListPage } from '~/features/blog/pages/blog-list-page'
 import { fetchExternalArticles } from '~/config/external-articles'
 import { fetchAllRssPosts } from '~/repositories/external-articles/fetch-rss-items'
-import { buildInternalArticle } from '~/domain-object/article/internal-article';
+import { buildInternalArticle, localOrNonDraftOnly } from '~/domain-object/article/internal-article';
 
 const [externalArticles, rssArticles, internalArticles] = await Promise.all([
   fetchExternalArticles(),
   fetchAllRssPosts(),
   getCollection('internal-article').then(async (entries) => 
-    await Promise.all(entries.map((entry) => buildInternalArticle(entry)))
+    await Promise.all(entries.filter(localOrNonDraftOnly).map((entry) => buildInternalArticle(entry)))
   )
 ])
 
